k8s-manifests/dashboard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-dashboard
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
