k8s-manifests/dashboard/recommended-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    argocd.argoproj.io/sync-wave: "1"
